--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-BOT_TOKEN=your_bot_token
-VERCEL_URL=forward-bot-seven.vercel.app
-SOURCE_CHANNEL_ID=-1001935700000
-DESTINATION_CHANNEL_ID=-100215600000
-ADMIN_ID=1234567890
+BOT_TOKEN=1599848664:AAHc75il2BECWK39tiPv4pVf-gZdPt4MFcw
+VERCEL_URL=https://file-store-theta.vercel.app/
+SOURCE_CHANNEL_ID=-1001127756447
+DESTINATION_CHANNEL_ID=-1002548337304
+ADMIN_ID=1047253913
