--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 BOT_TOKEN=1599848664:AAHc75il2BECWK39tiPv4pVf-gZdPt4MFcw
-VERCEL_URL=https://file-store-theta.vercel.app/
+VERCEL_URL=https://adhuvance-auto-forward-bot.vercel.app/
 SOURCE_CHANNEL_ID=-1001127756447
 DESTINATION_CHANNEL_ID=-1002548337304
 ADMIN_ID=1047253913
